Add current filename to Dashboard view #336
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="tab-pane container" id="tab-dashboard">
                 <div id="dashboard-container">
                     <div id="dashboard-title">
-                        <h2>Dashboard</h2>
+                        <h2 id="dashboard-title-text">Dashboard</h2>
                     </div>
                     <div id="dashboard-view">
                         <div class="row">
