--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             <!-- ScanData DataTable Tab-->
             <div class="tab-pane container" id="tab-scandata">
-                <table class="scandata-table display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
+                <table class="scandata-table display table table-striped nowrap table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
             </div>
 
             <!-- File Dashboard Tab -->
