Improve Conclusion uploads
* Add button to toggle DejaCode API key visibility
* Trim leading and trailing spaces from DejaCode API key
* Allow empty Product Version in DejaCode upload form
* Fix npm vulns via `npm audit`

Addresses: #391, #392

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
                             <small><em>Your API key can be found in your DejaCode Profile Settings</em></small>
                         </div>
                     </form>
+                    <button id="showApiKeyButton">Show/Hide API Key</button>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
