--- a/index.html
+++ b/index.html
@@ -132,25 +132,12 @@
                                 </div>
                             </div>
                             <div class="col-sm-8">
-                                <h3>Learn:</h3>
+                                <h3>Learn and Contribute:</h3>
                                 <div class="btn-group-vertical" role="group" aria-label="...">
-                                    <a href="https://github.com/nexB/scancode-toolkit/wiki/How-To:-Run-a-scan" class="btn btn-lg btn-default">How to run a scan with ScanCode Toolkit</a>
-                                    <a href="https://github.com/nexB/scancode-workbench/wiki/ScanCode-Workbench-Views" class="btn btn-lg btn-default">About ScanCode Workbench's various views</a>
-                                    <a href="https://github.com/nexB/scancode-workbench/wiki/Creating-Conclusions" class="btn btn-lg btn-default">How to create Conclusions</a>
+                                    <a href="https://github.com/nexB/scancode-workbench/" class="btn btn-lg btn-default">GitHub Repository</a>
+                                    <a href="https://scancode-workbench.readthedocs.io" class="btn btn-lg btn-default">Documentation</a>
+                                    <a href="https://github.com/nexB/scancode-workbench/issues" class="btn btn-lg btn-default">Report a Bug or Request a Feature</a>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="row" style="padding-top:50px">
-                            <div class="col-sm-6">
-                                <h4>Additional Help and Documentation:</h4>
-                                <ul>
-                                    <li><a href="https://github.com/nexB/scancode-workbench/wiki/">ScanCode Workbench Wiki</a></li>
-                                    <li><a href="https://github.com/nexB/scancode-workbench/issues/">ScanCode Workbench Issue Tracker</a></li>
-                                    <li><a href="https://github.com/nexB/scancode-workbench/wiki/Check-for-Errors-in-the-Developer-Tools">Checking for Errors</a></li>
-                                </ul>
-                            </div>
-                            <div class="col-sm-6">
-                                <!-- pass -->
                             </div>
                         </div>
                     </div>
@@ -535,33 +522,29 @@
                     <h2 class="modal-title" id="helpModalLabel">ScanCode Workbench Help</h2>
                 </div>
                 <div class="modal-body">
-                    <h2>Overview</h2>
-                    <p>ScanCode Workbench allows you take the scan results
+                    <h3>Overview</h3>
+                    <p>
+                        ScanCode Workbench allows you take the scan results
                         from the ScanCode and create a conclusion-level
                         software inventory. The conclusions (Concluded License,
                         Concluded Owner, etc.) you make when creating your
                         conclusion can be exported as a JSON file or saved as
                         SQLite file. For more information, see our
-                        <a href="https://github.com/nexB/scancode-workbench/wiki">wiki</a>.
                     </p>
-                    <h3>Basics</h3>
-                    <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/ScanCode-Workbench-Views">ScanCode Workbench</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Building">Building</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Platform-Support">Platform Support</a></li>
-                    </ul>
-                    <h3>Tutorials</h3>
-                    <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Import-JSON-and-Export-JSON">Import JSON and Export JSON</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Open-and-Save-a-SQLite-File">Open and Save a SQLite File</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Creating-Components">Creating Components</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Navigating-the-Chart-Summary-View">Navigating the Chart Summary View</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Navigating-the-Node-View">Navigating the Node View</a></li>
-                    </ul>
-                    <h3>Debugging</h3>
-                    <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Check-for-Errors-in-the-Developer-Tools">Check for Errors in the Developer Tools</a></li>
-                    </ul>
+                    <p>
+                        For more details, see our
+                        <a href="https://github.com/nexB/scancode-workbench/">GitHub Repository</a>.
+                    </p>
+                    <h3>Learn More:</h3>
+                    <p>
+                        Check out the ScanCode-Workbench
+                        <a href="https://scancode-workbench.readthedocs.io">Documentation</a>.
+                    </p>
+                    <h3>Having Trouble?</h3>
+                    <p>
+                        Report a bug or request a feature on the ScanCode-Workbench
+                        <a href="https://github.com/nexB/scancode-workbench/issues">Issues Page</a>.
+                    </p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
