--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
 
             <!-- ScanData DataTable Tab-->
             <div class="tab-pane container" id="tab-scandata">
-                <table class="scandata-table display table table-striped nowrap table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
+                <table class="scandata-table display table table-striped wrap table-bordered dataTable no-footer" cellspacing="0" width="100%" >
+                    <label class="radio-inline pull-right"><input type="radio" name="search-preference" value="global-search">Global Search</label>
+                    <label class="radio-inline pull-right"><input type="radio" name="search-preference" value="selective-search" checked>Selective Search</label>
+                </table>
             </div>
 
             <!-- File Dashboard Tab -->
