--- a/about.html
+++ b/about.html
@@ -15,6 +15,7 @@
         </div>
     </div>
   </body>
+  //here we will write the text file
     <script type="text/javascript">
         currentVersion = require('./package.json');
         const appVersion = `Version: ${currentVersion.version}`
