change home icon
Signed-off-by: Vishal-raj-1 <rajputvishal33786@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="UTF-8">
@@ -63,7 +63,7 @@
         <ul class="sidebar-nav">
             <li>
                 <button class="btn btn-sidebar" id="show-tab-welcomepage" data-toggle="tab" data-target="#tab-welcomepage" data-placement="right" title="Welcome Page">
-                    <i class="fa fa-barcode" aria-hidden="true"></i>
+                    <i class="fa fa-home" aria-hidden="true"></i>
                 </button>
             </li>
             <li>
