Limited Table view Search
Signed-off-by: Aayush-hub <ayushgarg1951@gmail.com>

--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
             <!-- ScanData DataTable Tab-->
             <div class="tab-pane container" id="tab-scandata">
                 <table class="scandata-table display table table-striped nowrap table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
+                <label class="checked-inline pull-right"><input type="checkbox" name="search-preference" value="global-search" checked>&nbsp;Search across all columns</label>
             </div>
 
             <!-- File Dashboard Tab -->
