--- a/index.html
+++ b/index.html
@@ -551,6 +551,7 @@
     </div><!-- /.modal -->
 
     <script>require('./assets/app/js/renderer.js');</script>
+    <!-- <script src='./assets/app/js/renderer.js'></script> -->
     <script src="assets/app/js/controllers/toggleBtn.js"></script>
 </body>
 </html>
