Changed issues link
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/index.html
+++ b/index.html
@@ -518,8 +518,8 @@
                     </p>
                     <h3>Having Trouble?</h3>
                     <p>
-                        Report a bug or request a feature on the ScanCode-Workbench
-                        <a href="https://github.com/nexB/scancode-workbench/issues">Issues Page</a>.
+                        Report a bug or request a feature on the ScanCode-Workbench.
+                        <a href="https://github.com/nexB/scancode-workbench/issues/new">Report an issue</a>.
                     </p>
                 </div>
                 <div class="modal-footer">
