Remove conclusion from docs
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/index.html
+++ b/index.html
@@ -381,11 +381,7 @@
                     <h3>Overview</h3>
                     <p>
                         ScanCode Workbench allows you take the scan results
-                        from the ScanCode and create a conclusion-level
-                        software inventory. The conclusions (Concluded License,
-                        Concluded Owner, etc.) you make when creating your
-                        conclusion can be exported as a JSON file or saved as
-                        SQLite file. For more information, see our
+                        from the ScanCode and evaluate it using charts
                     </p>
                     <p>
                         For more details, see our
