--- a/attribution.html
+++ b/attribution.html
@@ -58,13 +58,13 @@
     </p>
 
     <pre>
-  Copyright (c) 2016 - 2019 nexB Inc. and others. All rights reserved.</pre
+      Copyright (c) nexB Inc. and others. All rights reserved.</pre
       >
       <pre>
   Software license
   ================
 
-  Copyright (c) 2016 nexB Inc. and others. All rights reserved.
+  Copyright (c) nexB Inc. and others. All rights reserved.
   https://nexb.com and https://github.com/nexB/scancode-workbench/
   The ScanCode Workbench software is licensed under the Apache License version 2.0.
   ScanCode is a trademark of nexB Inc.
