Formatted files & Provision to open external links also in dev mode
Signed-off-by: Omkar Phansopkar <omkarphansopkar@gmail.com>

--- a/attribution.html
+++ b/attribution.html
@@ -57,10 +57,8 @@
       third-party licenses listed below.
     </p>
 
+    <pre>      Copyright (c) nexB Inc. and others. All rights reserved.</pre>
     <pre>
-      Copyright (c) nexB Inc. and others. All rights reserved.</pre
-      >
-      <pre>
   Software license
   ================
 
@@ -97,13 +95,14 @@
   Creative Commons CC0 1.0 Universal (CC0 1.0)
   Public Domain Dedication: http://creativecommons.org/publicdomain/zero/1.0/</pre>
 
-  <!-- <h2>ScanCode Workbench contains the following software components:</h2> -->
-  <!-- <h3><a id="End">End</a></h3> -->
-  
-  <h2>ScanCode Workbench contains the following image assets:</h2>
-  Import file illustration - <a href="https://storyset.com/work">Work illustrations by Storyset</a>
+    <!-- <h2>ScanCode Workbench contains the following software components:</h2> -->
+    <!-- <h3><a id="End">End</a></h3> -->
 
-  <br/>
-  <br/>
-</body>
+    <h2>ScanCode Workbench contains the following image assets:</h2>
+    Import file illustration -
+    <a href="https://storyset.com/work">Work illustrations by Storyset</a>
+
+    <br />
+    <br />
+  </body>
 </html>
