--- a/attribution.html
+++ b/attribution.html
@@ -25,7 +25,7 @@
   </head>
 
   <body>
-    <h1>Attribution for ScanCode Workbench 4.0.0 by nexB</h1>
+    <h1>Attribution for ScanCode Workbench 4.0.1 by nexB</h1>
 
     <p>
       For instructions on how to obtain a copy of any source code being made
@@ -33,17 +33,17 @@
       Workbench you may send your request in writing to:<br /><br />
       nexB Inc.<br />
     </p>
-    <p>735 Industrial Road #101<br />San Carlos, CA 94070<br />USA</p>
+    <p>4966 El Camino Real, Suite 119,<br />Los Altos, CA 94022<br />USA</p>
     <p></p>
     <p>
       Contact:
       <a href="http://www.nexb.com/" rel="nofollow">http://www.nexb.com/</a>
     </p>
 
-    <h2>About ScanCode Workbench 4.0.0:</h2>
+    <h2>About ScanCode Workbench 4.0.1:</h2>
 
     <p>
-      ScanCode Workbench 4.0.0 is licensed under
+      ScanCode Workbench 4.0.1 is licensed under
       <a href="#license_apache-2.0">Apache 2.0</a> AND
       <a href="#license_mit">MIT License</a> AND
       <a href="#license_cc0-1.0">CC0-1.0</a> AND
@@ -86,7 +86,7 @@
   You may also contact us to request the source code by email at info@nexb.com or
   by postal mail at:
     nexB Inc., ScanCode Workbench open source code request
-    735 Industrial Road, Suite #101, 94070 San Carlos, CA, USA
+    4966 El Camino Real, Suite 119, Los Altos, CA 94022, USA
   Please indicate in your communication the ScanCode Workbench version for which you are
   requesting source code.
 
